tests/semantic/invalid/03_r1_duplicate_let_in_function.hulk
function h() => let f = 1 in let f = 2 in f;

print(0);
